samples/_failures_safe/1761663334_aa5a1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc48766d.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_fc48766d.c:155:11: error: expected ‘;’ at end of input
  155 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_fc48766d.c:155:5: error: expected declaration or statement at end of input
  155 |     printf
      |     ^~~~~~
